# FF8_Cardgame

./: .gitignore  CMakeLists.txt  CMakeSettings.json  board.cpp  board.h  button.cpp  button.h  card.cpp  card.h  color.h  deck.cpp  deck.h  draw.cpp  draw.h  game.cpp  game.h  main.cpp  player.cpp  player.h  readme.md
